rest Controller: ProduktService, Checkout ToDo hinzugefügt

--- a/src/main/resources/static/app/checkout.html
+++ b/src/main/resources/static/app/checkout.html
@@ -144,6 +144,7 @@
 	<app-header active="checkout" title="button.checkout" :badge="warenkorb.produkte.length"></app-header>
 	<drawer></drawer>
 	<main class="mdl-layout__content">
+<!--		ToDo: Eingabe "Felder" reparieren-->
 		<div class="portfolio-max-width">
 			<h4 v-show="message" v-text="message" class="center"></h4>
 			<button type="button" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
