--- a/src/main/resources/static/app/order.html
+++ b/src/main/resources/static/app/order.html
@@ -58,6 +58,9 @@
 			<div class="mdl-cell mdl-cell--10-col mdl-card mdl-shadow--4dp">
 				<div class="mdl-card__title">
 					<span class="mdl-card__title-text" v-t="'order.title'"></span>
+					bestellnummer {{bestellung.id}}
+					betelldatum
+					lieferadresse
 				</div>
 				<table class="mdl-data-table mdl-js-data-table" data-upgraded=",MaterialDataTable">
 					<thead>
