--- a/src/main/resources/static/app/order.html
+++ b/src/main/resources/static/app/order.html
@@ -26,19 +26,22 @@
 				},
 				data: {
 					bestellung: {
+						kunde: {},
 						produkte: []
 					},
 					message: ''
 				},
 				methods: {},
 				created: function () {
-					let bestellId = localStorage.getItem('bestellId')
-					if (bestellId) {
+					let index = location.search.indexOf("id=")
+					if (index > -1) {
+						let bestellId = location.search.substring(index + 3, location.search.length)
+						console.log(bestellId)
 						fetch('/app/bestellung/' + bestellId)
-							.then(res => res.json())
-							.then(bestellung => {
-								this.bestellung = bestellung
-							})
+								.then(res => res.json())
+								.then(bestellung => {
+									this.bestellung = bestellung
+								})
 					}
 				}
 			})
@@ -55,13 +58,20 @@
 		<div class="portfolio-max-width">
 			<h4 v-show="message" v-text="message"></h4>
 
-			<div class="mdl-cell mdl-cell--10-col mdl-card mdl-shadow--4dp">
+			<div class="center mdl-cell mdl-cell--6-col mdl-card mdl-shadow--4dp">
 				<div class="mdl-card__title">
-					<span class="mdl-card__title-text" v-t="'order.title'"></span>
-					bestellnummer {{bestellung.id}}
-					betelldatum
-					lieferadresse
+					<H2>
+						<div class="mdl-card__title-text">
+							{{`${$t('order.title')} - ${$t('label.order.nr')} ${bestellung.id}`}}
+						</div>
+
+						<div class="mdl-card__subtitle-text">
+							{{`${$t('label.order.date')}: ${bestellung.datum}`}}
+						</div>
+					</H2>
 				</div>
+
+
 				<table class="mdl-data-table mdl-js-data-table" data-upgraded=",MaterialDataTable">
 					<thead>
 					<tr>
@@ -71,12 +81,12 @@
 					</tr>
 					</thead>
 					<tbody>
-					<tr v-for="p in bestellung.produkte" :set="produkt=p.produkt">
+					<tr v-for="p in bestellung.produkte">
 						<td class="mdl-data-table__cell--non-numeric">
-							<img :src="'/fotos/'+produkt.id" :alt="produkt.name" height="30" border="0"/>
+							<img :src="'/fotos/'+p.produkt.id" :alt="p.produkt.name" height="30" border="0"/>
 						</td>
-						<td class="mdl-data-table__cell--non-numeric">{{produkt.name}}</td>
-						<td>{{produkt.preisFormatiert}} €</td>
+						<td class="mdl-data-table__cell--non-numeric">{{p.produkt.name}}</td>
+						<td>{{p.produkt.preisFormatiert}} €</td>
 					</tr>
 					</tbody>
 					<tfoot>
@@ -92,6 +102,45 @@
 					</tr>
 					</tfoot>
 				</table>
+			</div>
+
+
+			<div class="center mdl-cell mdl-cell--6-col mdl-card mdl-shadow--4dp" v-if="bestellung.kunde.id">
+				<div class="mdl-card__title">
+					<H4>
+						<div class="mdl-card__title-text" v-t="'title.shipping.address'"></div>
+					</H4>
+				</div>
+
+				<div class="mdl-card__supporting-text" :set="kunde=bestellung.kunde">
+					<input type="hidden" id="id" v-model="kunde.id">
+					<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label has-placeholder">
+						<span class="mdl-textfield__input" v-text="kunde.vorname" placeholder=""></span>
+						<label class="mdl-textfield__label" v-t="'label.shipping.prename'"></label>
+					</div>
+
+					<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label has-placeholder">
+						<span class="mdl-textfield__input" v-text="kunde.nachname" placeholder=""></span>
+						<label class="mdl-textfield__label" v-t="'label.shipping.name'"></label>
+					</div>
+
+					<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label has-placeholder"
+						 style="width:604px">
+						<span class="mdl-textfield__input" v-text="kunde.strasse" placeholder=""></span>
+						<label class="mdl-textfield__label" v-t="'label.shipping.address'"></label>
+					</div>
+					<br>
+
+					<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label has-placeholder">
+						<span class="mdl-textfield__input" v-text="kunde.plz" placeholder=""></span>
+						<label class="mdl-textfield__label" v-t="'label.shipping.zip'"></label>
+					</div>
+					<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label has-placeholder">
+						<span class="mdl-textfield__input" v-text="kunde.ort" placeholder=""></span>
+						<label class="mdl-textfield__label" v-t="'label.shipping.city'"></label>
+					</div>
+				</div>
+
 			</div>
 		</div>
 
