--- a/src/main/resources/mail/de/versand.html
+++ b/src/main/resources/mail/de/versand.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 
-<p>Hallo <span th:text="${kunde.nameFormatiert}"></span>,<br/>
+<p>Guten Tag <span th:text="${kunde.nameFormatiert}"></span>,<br/>
 	<br/>
-	Ihre Bestellung Nr. <span th:text="${bestellung.id}"></span> wurde versendet.</p>
+	Ihre Bestellung mit der Nr. <span th:text="${bestellung.id}"></span> wurde versendet.</p>
 
-<p>Die Lieferung enthält folgende Artikel:<br/>
+<p>Ihre Lieferung enthält folgende Artikel:<br/>
 	<div th:each="bp : ${bestellung.produkte}">
 		Bezeichnung: <span th:text="${bp.produkt.name}"></span>,
 		Preis: <span th:text="${bp.produkt.preisFormatiert}"></span>€,
@@ -20,10 +20,10 @@
 	Gesamtzahl bestellter Produkte: <span th:text="${bestellung.gesamtzahl}"></span>,
 	Gesamtpreis: <span th:text="${bestellung.gesamtpreis}"></span><br/>
 </p>
-<p>Es kann keine Änderung mehr an Ihrer Bestellung vorgenommen werden, da sie	sich bereits im Versand befindet</p>
+<p>Es kann keine Änderung mehr an Ihrer Bestellung vorgenommen werden, da Sie sich bereits im Versand befindet</p>
 
-<p>Ihre Bestellung sollte in den nächsten 3 Werktage bei Ihnen ankommen.<br/>
-	Versendet wurde an folgende Adresse:<br/>
+<p>Ihre Bestellung sollte in den nächsten 2-3 Werktage bei Ihnen ankommen.<br/>
+	Ihr Packet wurde an folgende Adresse versendet:<br/>
 	<span th:text="${kunde.nameFormatiert}"></span><br/>
 	<span th:text="${kunde.strasse}"></span><br/>
 	<span th:text="${kunde.plz}"></span> <span th:text="${kunde.ort}"></span>
@@ -34,6 +34,6 @@
 </p>
 
 Mit freundlichen Grüßen,<br/>
-IhrDemo-Shop-Team
+Ihr Team Spermanent
 </body>
 </html>
