--- a/src/main/resources/static/app/about.html
+++ b/src/main/resources/static/app/about.html
@@ -41,7 +41,7 @@
 					<h2 class="mdl-card__title-text" v-t="'nav.about'"></h2>
 				</div>
 				<div class="mdl-card__media">
-					<img class="article-image" src="/images/about-header.jpg" border="0" alt="">
+					<img class="article-image" src="/images/nav-header.jpg" border="0" alt="">
 				</div>
 
 				<div class="mdl-grid portfolio-copy">
@@ -54,14 +54,13 @@
 						<strong>&copy;opyright</strong>
 						<div itemscope itemtype="http://schema.org/ScholarlyArticle">
 							<address class="mdl-card__supporting-text no-padding">
-								<a href="http://artingo.net" target="_blank">artingo.net</a><br/>
-								<span itemprop="author">Alfred Walther</span><br/>
-								Elisabethenstr. 19<br/>
-								D-61239 Ober-Mörlen, Germany
+								<a href="https://onlyfans.com/misterspermanent" target="_blank">Miko Spermanent</a><br/>
+								<span itemprop="author">The Spermanent INK.</span><br/>
+
 							</address>
 							<p></p>
-							<p>Em@il: <a href="mailTo://office@artingo.net">office@artingo.net</a><br/>
-								Skype: <a href="skype:artingo.net?chat">artingo.net</a>
+							<p>Em@il: <a href="mailTo://misterspermanent@gmail.com">misterspermanent@gmail.com</a><br/>
+
 							</p>
 						</div>
 					</div>
